<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <!--include app bar-->
    <include layout="@layout/app_bar" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_default_title"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.Body2" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_default_body"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.Body2" />
    </android.support.design.widget.TextInputLayout>

    <Switch
        android:id="@+id/switch_snow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_snow"
        android:textAppearance="@style/TextAppearance.Body2" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_moderator_notification_email"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/TextAppearance.Body2" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_last_version_andorid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_latest_android_version"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/TextAppearance.Body2" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_last_version_ios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_latest_ios_version"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/TextAppearance.Body2" />
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <com.pettersonapps.wl.presentation.view.SquareButton
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/text_save"
            android:textAppearance="@style/TextAppearance.Body2"
            android:textColor="@color/colorWhite" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/colorWhite"
            android:visibility="gone" />
    </RelativeLayout>
</LinearLayout>