<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    >

    <!--include app bar-->
    <include layout="@layout/app_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:inputType="textCapWords"
                    android:textAppearance="@style/TextAppearance.Body2" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phone_optional"
                    android:inputType="phone"
                    android:textAppearance="@style/TextAppearance.Body2" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_skype"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_skype_optional"
                    android:inputType="text"
                    android:textAppearance="@style/TextAppearance.Body2" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:editable="false"
                    android:focusable="false"
                    android:hint="@string/hint_birthday"
                    android:inputType="date"
                    android:textAppearance="@style/TextAppearance.Body2" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_first_working_day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:editable="false"
                    android:focusable="false"
                    android:hint="@string/hint_first_working_day"
                    android:inputType="date"
                    android:textAppearance="@style/TextAppearance.Body2" />

            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/spinner_department"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_margin="16dp"
                android:entries="@array/departments"
                android:prompt="@string/department_prompt"
                android:textAppearance="@style/TextAppearance.Body2" />

            <Switch
                android:id="@+id/switch_allow_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/text_allow_edit"
                android:textAppearance="@style/TextAppearance.Body2" />

            <Switch
                android:id="@+id/switch_blocked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/text_blocked"
                android:textAppearance="@style/TextAppearance.Body2" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <com.pettersonapps.wl.presentation.view.SquareButton
                    android:id="@+id/button_save"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/text_save"
                    android:textAppearance="@style/TextAppearance.Body2"
                    android:textColor="@color/colorTextWhite" />

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:indeterminateTint="@color/colorTextWhite"
                    android:visibility="gone" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>